--- a/docs/api-reference/CRMScript.Native.Inbox.yml
+++ b/docs/api-reference/CRMScript.Native.Inbox.yml
@@ -3,18 +3,32 @@ items:
 - uid: CRMScript.Native.Inbox
   commentId: T:CRMScript.Native.Inbox
   id: Inbox
-  so.intellisense: Void.Inbox
   langs:
   - crmscript
   children:
+  - CRMScript.Native.Inbox.#ctor
   - CRMScript.Native.Inbox.addSmtpMail(String,String,Integer)
-  - CRMScript.Native.Inbox.#ctor()
   name: Inbox
   nameWithType: Inbox
   fullName: CRMScript.Native.Inbox
   type: Class
   summary: 
   example: 
+- uid: CRMScript.Native.Inbox.#ctor
+  commentId: M:CRMScript.Native.Inbox.#ctor
+  id: '#ctor'
+  so.intellisense: Void.Inbox
+  langs:
+  - crmscript
+  name: '#ctor'
+  nameWithType: Inbox.#ctor
+  fullName: CRMScript.Native.Inbox.#ctor
+  type: Constructor
+  summary: "\nInitializes a new instance of the Inbox class.\n"
+  remarks: 
+  syntax: 
+    content: Inbox
+  example:
 - uid: CRMScript.Native.Inbox.addSmtpMail(String,String,Integer)
   commentId: M:CRMScript.Native.Inbox.addSmtpMail(String,String,Integer)
   id: 'addSmtpMail(String,String,Integer)'
@@ -25,36 +39,24 @@ items:
   nameWithType: Inbox.addSmtpMail(String,String,Integer)
   fullName: CRMScript.Native.Inbox.addSmtpMail(String,String,Integer)
   type: Method
-  summary: "\nWith this method you can insert an SMTP formatted email into eJournal's inbox, which then will be imported when ejournalCron runs. The mail string must conform to the SMTP standard.\n"
-  remarks: 
+  summary: "\nInserts an SMTP formatted email into Service's inbox, which then will be imported when ejournalCron runs.\n"
+  remarks: "\nThe mail string must conform to the SMTP standard.\n"
   syntax: 
-    content: addSmtpMail(String smtpMail, String uidl, Integer filterId)
+    content: Integer addSmtpMail(String smtpMail, String uidl, Integer filterId)
     parameters:
     - id: smtpMail
       type: CRMScript.Global.String
-      description: 
+      description: A string with a SMTP formatted mail
     - id: uidl
       type: CRMScript.Global.String
-      description: 
+      description: The UIDL for this email. Can be anything, but it has to be unique for each email
     - id: filterId
       type: CRMScript.Global.Integer
-      description: 
-  example: 
-- uid: CRMScript.Native.Inbox.#ctor()
-  commentId: M:CRMScript.Native.Inbox.#ctor()
-  id: '#ctor()'
-  so.intellisense: Void.Inbox
-  langs:
-  - crmscript
-  name: '#ctor()'
-  nameWithType: Inbox.#ctor()
-  fullName: CRMScript.Native.Inbox.#ctor()
-  type: Constructor
-  summary: 
-  remarks: 
-  syntax: 
-    content: Inbox
-  example: 
+      description: The ID of the mailbox that this mail will be imported under
+    return:
+      type: CRMScript.Global.Integer
+      description: The ID of the inserted email.
+  example:  
 references:
 - uid: CRMScript.Native.Inbox
   commentId: T:CRMScript.Native.Inbox
