--- a/docs/api-reference/CRMScript.Native.LocalizedField.yml
+++ b/docs/api-reference/CRMScript.Native.LocalizedField.yml
@@ -3,17 +3,16 @@ items:
 - uid: CRMScript.Native.LocalizedField
   commentId: T:CRMScript.Native.LocalizedField
   id: LocalizedField
-  so.intellisense: Void.LocalizedField
   langs:
   - crmscript
   children:
+  - CRMScript.Native.LocalizedField.#ctor
   - CRMScript.Native.LocalizedField.getAddressType()
   - CRMScript.Native.LocalizedField.getLabel()
   - CRMScript.Native.LocalizedField.getName()
   - CRMScript.Native.LocalizedField.getTooltip()
   - CRMScript.Native.LocalizedField.getValue()
   - CRMScript.Native.LocalizedField.getValueLength()
-  - CRMScript.Native.LocalizedField.#ctor()
   - CRMScript.Native.LocalizedField.setName(String)
   - CRMScript.Native.LocalizedField.setTooltip(String)
   - CRMScript.Native.LocalizedField.setValue(String)
@@ -21,7 +20,23 @@ items:
   nameWithType: LocalizedField
   fullName: CRMScript.Native.LocalizedField
   type: Class
-  summary: "\nA class for representing fields (Used by Company::set/getAddress() functions).\n"
+  summary: "\nRepresents fields. Used by Company.set/getAddress() functions.\n"
+  example: 
+  - "\n<pre><code>Company c;\nc.load(someId);\nLocalizedField[][] adr = c.getFormattedAddress();\nadr[0][0].setValue(adr[0][0].getValue() + &quot;A&quot;); // Add an 'A' to the first address field\nc.setFormattedAddress(adr);\nc.save();\n\n// Print all info about all the address fields\nfor (Integer i = 0; i &lt; adr.length(); i++)\n{\n  for (Integer j = 0; j &lt; adr[i].length(); j++)\n    print(adr[i][j].getLabel() + &quot;:&quot; + adr[i][j].getName() + &quot;:&quot; + adr[i][j].getValue() + &quot;:&quot; + adr[i][j].getTooltip() + &quot;:&quot; + adr[i][j].getValueLength().toString() + &quot;:&quot; + adr[i][j].getAddressType() +  &quot;     &quot;);\n\n  print(&quot;\n&quot;);\n}</code></pre>\n"
+- uid: CRMScript.Native.LocalizedField.#ctor
+  commentId: M:CRMScript.Native.LocalizedField.#ctor
+  id: '#ctor'
+  so.intellisense: Void.LocalizedField
+  langs:
+  - crmscript
+  name: '#ctor'
+  nameWithType: LocalizedField.#ctor
+  fullName: CRMScript.Native.LocalizedField.#ctor
+  type: Constructor
+  summary: "\nInitializes a new instance of the Knowledge class.\n"
+  remarks: 
+  syntax: 
+    content: LocalizedField
   example: 
   - "\n<pre><code>Company c;\nc.load(someId);\nLocalizedField[][] adr = c.getFormattedAddress();\nadr[0][0].setValue(adr[0][0].getValue() + &quot;A&quot;); // Add an 'A' to the first address field\nc.setFormattedAddress(adr);\nc.save();\n\n// Print all info about all the address fields\nfor (Integer i = 0; i &lt; adr.length(); i++)\n{\n  for (Integer j = 0; j &lt; adr[i].length(); j++)\n    print(adr[i][j].getLabel() + &quot;:&quot; + adr[i][j].getName() + &quot;:&quot; + adr[i][j].getValue() + &quot;:&quot; + adr[i][j].getTooltip() + &quot;:&quot; + adr[i][j].getValueLength().toString() + &quot;:&quot; + adr[i][j].getAddressType() +  &quot;     &quot;);\n\n  print(&quot;\n&quot;);\n}</code></pre>\n"
 - uid: CRMScript.Native.LocalizedField.getAddressType()
@@ -37,8 +52,11 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: getAddressType()
-    parameters:
+    content: String getAddressType()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description:
   example: 
 - uid: CRMScript.Native.LocalizedField.getLabel()
   commentId: M:CRMScript.Native.LocalizedField.getLabel()
@@ -53,8 +71,11 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: getLabel()
-    parameters:
+    content: String getLabel()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description:
   example: 
 - uid: CRMScript.Native.LocalizedField.getName()
   commentId: M:CRMScript.Native.LocalizedField.getName()
@@ -69,8 +90,11 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: getName()
-    parameters:
+    content: String getName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description:
   example: 
 - uid: CRMScript.Native.LocalizedField.getTooltip()
   commentId: M:CRMScript.Native.LocalizedField.getTooltip()
@@ -85,8 +109,11 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: getTooltip()
-    parameters:
+    content: String getTooltip()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description:
   example: 
 - uid: CRMScript.Native.LocalizedField.getValue()
   commentId: M:CRMScript.Native.LocalizedField.getValue()
@@ -101,8 +128,11 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: getValue()
-    parameters:
+    content: String getValue()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description:
   example: 
 - uid: CRMScript.Native.LocalizedField.getValueLength()
   commentId: M:CRMScript.Native.LocalizedField.getValueLength()
@@ -117,25 +147,12 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: getValueLength()
-    parameters:
+    content: String getValueLength()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description:
   example: 
-- uid: CRMScript.Native.LocalizedField.#ctor()
-  commentId: M:CRMScript.Native.LocalizedField.#ctor()
-  id: '#ctor()'
-  so.intellisense: Void.LocalizedField
-  langs:
-  - crmscript
-  name: '#ctor()'
-  nameWithType: LocalizedField.#ctor()
-  fullName: CRMScript.Native.LocalizedField.#ctor()
-  type: Constructor
-  summary: "\nA class for representing fields (Used by Company::set/getAddress() functions).\n"
-  remarks: 
-  syntax: 
-    content: LocalizedField
-  example: 
-  - "\n<pre><code>Company c;\nc.load(someId);\nLocalizedField[][] adr = c.getFormattedAddress();\nadr[0][0].setValue(adr[0][0].getValue() + &quot;A&quot;); // Add an 'A' to the first address field\nc.setFormattedAddress(adr);\nc.save();\n\n// Print all info about all the address fields\nfor (Integer i = 0; i &lt; adr.length(); i++)\n{\n  for (Integer j = 0; j &lt; adr[i].length(); j++)\n    print(adr[i][j].getLabel() + &quot;:&quot; + adr[i][j].getName() + &quot;:&quot; + adr[i][j].getValue() + &quot;:&quot; + adr[i][j].getTooltip() + &quot;:&quot; + adr[i][j].getValueLength().toString() + &quot;:&quot; + adr[i][j].getAddressType() +  &quot;     &quot;);\n\n  print(&quot;\n&quot;);\n}</code></pre>\n"
 - uid: CRMScript.Native.LocalizedField.setName(String)
   commentId: M:CRMScript.Native.LocalizedField.setName(String)
   id: 'setName(String)'
@@ -149,11 +166,13 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: setName(String p_name)
+    content: Void setName(String name)
     parameters:
-    - id: p_name
+    - id: name
       type: CRMScript.Global.String
       description: 
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.LocalizedField.setTooltip(String)
   commentId: M:CRMScript.Native.LocalizedField.setTooltip(String)
@@ -168,11 +187,13 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: setTooltip(String p_value)
+    content: Void setTooltip(String value)
     parameters:
-    - id: p_value
+    - id: value
       type: CRMScript.Global.String
       description: 
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.LocalizedField.setValue(String)
   commentId: M:CRMScript.Native.LocalizedField.setValue(String)
@@ -187,11 +208,13 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: setValue(String p_value)
+    content: Void setValue(String value)
     parameters:
-    - id: p_value
+    - id: value
       type: CRMScript.Global.String
       description: 
+    return:
+      type: CRMScript.Global.Void
   example: 
 references:
 - uid: CRMScript.Native.LocalizedField
@@ -206,3 +229,9 @@ references:
   name: String
   nameWithType: String
   fullName: CRMScript.Global.String
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
